--- a/templates/hospital_blood_profile.html
+++ b/templates/hospital_blood_profile.html
@@ -27,8 +27,8 @@
                
                 <input type="hidden" id="userAddress" value="{{ donor_latitude }}" name="latitude"  />
                 <input type="hidden" id="userAddress" value="{{ donor_longitude }}" name="longitude" /> {% endcomment %}
-                <form method="post">
-                {% csrf_token %}
+                {% comment %} <form method="post">
+                {% csrf_token %} {% endcomment %}
                 <div class="form-group">
                     <label for="hospital_id">Select City:</label>
                     <select name="city" id="city" class="form-control" required>
@@ -41,7 +41,7 @@
                 <div class="input-group-append">
                     <button class="custom-button" type="submit">Search</button>
                 </div>
-                </form>
+                {% comment %} </form> {% endcomment %}
             {% comment %} </div> {% endcomment %}
         </form>
     </div>
